@@ -1,3 +1,5 @@
+  - fix invalid HTML issue with popup (Stefanos Harhalakis,
+    Monte)
   - fixed {popup} to properly handle inarray and function parameters and added
     support for mouseoff and followmouse options (boots)
 
